--- a/Demo_Source/Notebooks/ZavaSensorSender.ipynb
+++ b/Demo_Source/Notebooks/ZavaSensorSender.ipynb
@@ -125,7 +125,7 @@
    "outputs": [],
    "source": [
     "# Step 1 Setup Connection Info\n",
-    "connection_string = \"Endpoint=<###YOUR RTI ENDPOINT###>\";\n",
+    "connection_string = \"Endpoint=sb://<###YOUR RTI ENDPOINT###>\";\n",
     "producer = EventHubProducerClient.from_connection_string(connection_string)\n",
     "\n",
     "# Step 2: Read CSV file from Lakehouse Files\n",
