--- a/Demo_Source/Notebooks/ZavaSensorSenderShoe.ipynb
+++ b/Demo_Source/Notebooks/ZavaSensorSenderShoe.ipynb
@@ -206,7 +206,7 @@
    "outputs": [],
    "source": [
     "# Step 1 Setup Connection Info\n",
-    "connection_string = \"Endpoint=sb://<###YOUR RTI ENDPOINT###>.servicebus.windows.net/;\";\n",
+    "connection_string = \"Endpoint=sb://<###YOUR RTI ENDPOINT###>\";\n",
     "producer = EventHubProducerClient.from_connection_string(connection_string)\n",
     "\n",
     "# Step 2: Read CSV file from Lakehouse Files\n",
